
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






union bpf_attr {int prog_type; int insn_cnt; int log_level; int kern_version; int log_size; int log_buf; int license; int insns; } ;
struct bpf_insn {int dummy; } ;
typedef enum bpf_prog_type { ____Placeholder_bpf_prog_type } bpf_prog_type ;
typedef int attr ;
typedef int __u64 ;


 int BPF_PROG_LOAD ;
 int LOG_BUF_SIZE ;
 int __NR_bpf ;
 scalar_t__* bpf_log_buf ;
 int syscall (int ,int ,union bpf_attr*,int) ;

__attribute__((used)) static int bpf_prog_load(enum bpf_prog_type prog_type,
    const struct bpf_insn *insns, int prog_len,
    const char *license, int kern_version) {
 union bpf_attr attr = {
  .prog_type = prog_type,
  .insns = (__u64)insns,
  .insn_cnt = prog_len / sizeof(struct bpf_insn),
  .license = (__u64)license,
  .log_buf = (__u64)bpf_log_buf,
  .log_size = LOG_BUF_SIZE,
  .log_level = 1,
 };

 attr.kern_version = kern_version;

 bpf_log_buf[0] = 0;

 return syscall(__NR_bpf, BPF_PROG_LOAD, &attr, sizeof(attr));
}
